--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
 		"@heroicons/react": "^2.1.5",
 		"dotenv": "^16.4.5",
 		"formik": "^2.4.5",
+		"framer-motion": "^12.5.0",
 		"jwt-decode": "^4.0.0",
-		"motion": "^11.18.1",
 		"react": "^18.2.0",
 		"react-cookie": "^7.1.4",
 		"react-dom": "^18.2.0",
